--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "mustache spec",
     "spec",
     "specs",
-    "spec tests"
-    "tests"
+    "spec tests",
+    "tests",
     "test",
     "specification"
   ],
