--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,7 @@ node_js:
   - "0.11"
 matrix:
   allow_failures:
-    - node_js: "0.11"
+    - node_js: "0.10"
   fast_finish: true
+script: "npm run-script test-travis"
+after_script: "npm install coveralls && cat ./coverage/lcov.info | coveralls"
