--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
   "name": "mustache-spec",
-  "description": "mustache/spec as package",
-  "version": "v0.0.1",
+  "version": "0.0.0",
+  "description": "{{Mustache}} template specification, `mustache/spec` as package",
   "scripts": {
-    "lint": "jshint . && jscs . --reporter inline",
-    "test": "mocha --require should"
+    "lint": "jshint index.js && jscs index.js --reporter inline",
+    "test": "mocha",
+    "test-cov": "istanbul cover _mocha",
+    "test-travis": "istanbul cover _mocha --report lcovonly"
   },
   "author": {
     "name": "Charlike Make Reagent",
     "email": "mameto_100@mail.bg",
     "url": "https://github.com/tunnckoCore"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/tunnckoCore/mustache-spec.git"
   },
   "keywords": [
     "mustache",
@@ -19,21 +25,29 @@
     "spec tests",
     "tests",
     "test",
+    "template",
+    "templates",
+    "syntax",
+    "lang",
+    "language",
+    "langs",
+    "languages",
+    "render",
+    "standart",
+    "tpl",
+    "compile",
     "specification"
   ],
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/tunnckoCore/mustache-spec.git"
-  },
   "license": {
     "type": "MIT",
     "url": "https://github.com/tunnckoCore/mustache-spec/blob/master/license.md"
   },
   "dependencies": {
-    "export-files": "*"
+    "export-files": ">=0"
   },
   "devDependencies": {
-    "mocha": ">=2",
-    "should": "^4.4.1"
+    "istanbul-harmony": "^0.3.1",
+    "mocha": "*",
+    "mocha-lcov-reporter": "^0.0.1"
   }
 }
