--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mustache-spec",
-  "version": "0.0.1",
+  "version": "0.0.0",
   "description": "{{Mustache}} template specification, `mustache/spec` as package",
   "scripts": {
     "lint": "jshint index.js && jscs index.js --reporter inline",
@@ -9,7 +9,7 @@
     "test-travis": "istanbul cover _mocha --report lcovonly"
   },
   "author": {
-    "name": "Charlike Make Reagent",
+    "name": "Charlike Mike Reagent",
     "email": "mameto_100@mail.bg",
     "url": "https://github.com/tunnckoCore"
   },
@@ -17,37 +17,14 @@
     "type": "git",
     "url": "git://github.com/tunnckoCore/mustache-spec.git"
   },
-  "keywords": [
-    "mustache",
-    "mustache spec",
-    "spec",
-    "specs",
-    "spec tests",
-    "tests",
-    "test",
-    "template",
-    "templates",
-    "syntax",
-    "lang",
-    "language",
-    "langs",
-    "languages",
-    "render",
-    "standart",
-    "tpl",
-    "compile",
-    "specification"
-  ],
+  "keywords": [],
   "license": {
     "type": "MIT",
     "url": "https://github.com/tunnckoCore/mustache-spec/blob/master/license.md"
   },
-  "dependencies": {
-    "export-files": ">=1"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "istanbul-harmony": "^0.3.1",
-    "mocha": "*",
-    "mocha-lcov-reporter": "^0.0.1"
+    "istanbul-harmony": "~0.3.1",
+    "mocha": "~2.2.1"
   }
 }
